--- a/src/stylesheets/PostList.module.css
+++ b/src/stylesheets/PostList.module.css
@@ -1,12 +1,11 @@
 /* post list */
 .list {
-    
+    flex: 1;
     box-sizing: border-box;
-    min-height: 0;
     display: flex;
     flex-direction: column;
     position: relative;
-    
+    min-height: 0;
 }
 
 .list .title {
@@ -15,7 +14,7 @@
     padding: .4rem;box-shadow: 0 0 2px var(--accent);
 }
 .container {
-    
+    scrollbar-width: none;
     flex: 1;
     overflow-y: auto;
 }
