--- a/src/stylesheets/ProfilePage.module.css
+++ b/src/stylesheets/ProfilePage.module.css
@@ -1,6 +1,8 @@
 .page {
+    height: 100%;
     display: flex;
     flex-direction: column; 
+    overflow: hidden;
 }
 
 .user {
